# MCP-Suite

./: Add CORS middleware to support MCP Inspector and web-based clients.md  Meraki MCP SERVER Issue_01- resolve 401 Unauthorized by standardizing Environment Variable names.md  README.md  list_catc_clients.py  list_catc_devices.py  list_meraki_networks.py  list_splunk_indexes.py  start-for-cursor.sh
catc-mcp-server/: Prompt_Library.md  README.md  catc_mcp_server.py
ios-xe-mcp-server/: Prompt_Library.md
ise-mcp-server/: Dockerfile  ISE_MCP_TROUBLESHOOTING.md  Prompt_Library.md  ise_mcp_server.py  pyproject.toml
meraki-mcp-server/: Prompt_Library.md
splunk-mcp-server/: Prompt_Library.md  README.md  SPLUNK_MCP_TROUBLESHOOTING.md  splunk_mcp_server.py
thousandeyes-mcp-server/: Prompt_Library.md
