[project]
name = "ise-mcp-server"
version = "0.1.0"
description = "Cisco ISE MCP server for LibreChat integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.6,<2.13",
    "requests>=2.31.0",
    "uvicorn>=0.35.0",
    "python-dotenv>=1.0.0",
    "urllib3>=1.26.0",
]
